Fixed images on mobile version. Increased padding on desktop. Other minor UI fixes :lipstick:

--- a/src/global.css
+++ b/src/global.css
@@ -64,7 +64,7 @@ section {
 
 @media all and (min-width: 1024px) {
 	section {
-		padding: 1em 5rem;
+		padding: 1em 8rem;
 	}
 }
 
